see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

21-Dec-2010 Christophe Demko
 # [#23894] Components menu item visible in disabled menu (Sander Potjer)
 # [#23782] [PATCH] Fix router calls for components containing hyphens and full stops. (Tom Lee)
 # [#23811] PHP Strict Compatibility (Elin Waring, Rune Sjøen)
 ^ [#23877] Improve how HTML entities in meta data are handled (Rouven Weßling)
 ^ [#23879] Remove a workaround around a PHP4 limitation (Rouven Weßling)
 # [#23601] When creating an account keeps saying email adress already exists (Ian MacLennan)
 # [#23761] AutoLoader (Mathieu Delisle, Rune Sjøen)
 # [#23838] JCacheStorage should not extend JObject PHP Strict issue (Elin Waring)

20-Dec-2010 Jean-Marie Simonet
 # [#23903] Menu item type external url issues

19-Dec-2010 Jean-Marie Simonet
 # [#23819] Self-Registering Users aren't assigned any usergroup. Thanks Elin.
 # [#22982] fix: JURI::root(true) -> JURI::root() (template preview). Thanks Rune.
 # [#23889] Action ordering com_users. Thanks Sander.
 # [#23880] Contact-form emty. No inputfields. Thanks Bill.
 # [#23820] Missing Lang Strings because of validate.js
 
18-Dec-2010 Ian MacLennan
 # [#23874] JPluginHelper::importPlugin('users') instead of JPluginHelper::importPlugin('user')

18-Dec-2010 Jean-Marie Simonet
 # [#23799] Can't uninstall Beez and Bluestork templates.
 $ Updating Milkyway description
 # [#23865] Missing language string. Thanks Bill.
 
17-Dec-2010 Jean-Marie Simonet
 # [#23670] Non-installed languages display in the Language Manager Installed view. Thanks Pooja.