@@ -70,7 +70,7 @@ $listDirn	= $this->state->get('list.direction');
 		</tfoot>
 		<tbody>
 		<?php foreach ($this->items as $i => $item): ?>
-			<tr class="row<?php echo $i%2;?>" style="<?php if ($item->protected) echo 'color:#999999;';?>">
+			<tr class="row<?php echo $i%2; if ($item->protected) echo ' protected';?>">
 				<td>
 					<?php echo JHtml::_('grid.id', $i, $item->extension_id); ?>
 				</td>
