@@ -45,7 +45,7 @@ $listDirn	= $this->state->get('list.direction');
 
 		<tbody>
 		<?php foreach ($this->items as $i => $item): ?>
-			<tr class="row<?php echo $i%2;?>" style="<?php if ($item->protected) echo 'color:#999999;';?>">
+			<tr class="row<?php echo $i%2; if ($item->protected) echo ' protected';?>">
 				<td><?php echo JHtml::_('grid.id', $i, $item->extension_id); ?></td>
 				<td><span class="bold hasTip" title="<?php echo htmlspecialchars($item->name.'::'.$item->description); ?>"><?php echo $item->name; ?></span></td>
                 <td class="center"><?php echo $item->client; ?></td>				
