@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+23-Dec-2010 Jean-Marie Simonet
+ # [#23945] Remove hardcoded color. Thanks Andrea
+ 
 21-Dec-2010 Christophe Demko
  # [#23894] Components menu item visible in disabled menu (Sander Potjer)
  # [#23782] [PATCH] Fix router calls for components containing hyphens and full stops. (Tom Lee)
